* GD > Recently Viewed now supports Elementor pro skins - ADDED
* Should not send comment email notification to author for spam comment - CHANGED
* OSM Directions API changed to non SSL temporarily to fix their certificate error - CHANGED
* [gd_post_badge] is_greater_than condition is not working with post date - FIXED
* Elementor Image dynamic field fallback image not working - FIXED

= 2.0.0.94 =
* Image lightbox can show image id if title is empty - FIXED
* Switching package shows all images instead of package image limit - FIXED
* Able to set default zoom level on add listing page map - ADDED
* City, region names with Greek characters causes issue in meta title - FIXED
* AyeCode Connect plugin added in recommend plugins list - ADDED
* GD > Post meta for overall_rating is now rounded to one decimal place (raw value still available) - CHANGED
* Titles and meta value for overall_rating is now rounded to one decimal place - CHANGED
* GD > Post Images, when using screenshots from custom fields, screenshots can now link to different URL value - ADDED
* Iphone ratings sometimes not able to set rating if text size of rating makes the rating jump between lines when changed - FIXED
* select2 dropdown style conflict after Yoast 14.1 - FIXED
* Constrain the proportions on preview of uploaded image - FIXED

= 2.0.0.93 =
* Elementor archive items not always given an ID so sometime map is not limited to current listings - FIXED
* Image title & caption with apostrophes shows slash after saved - FIXED
* Elementor social icons phone number displays even when empty - FIXED
* Oxygen page builder can't edit the add listing page because of redirect - FIXED
* Add GD variables to the Yoast extra replacements - ADDED
* Elementor icon list fallback value #hide not working on archive pages - ADDED
* [gd_page_title] shortcode/widget added to show page title on GD pages - ADDED
* Fix for one comment restriction for cookie not enable case - FIXED