@@ -7,6 +7,7 @@
 * OSM Directions API changed to non SSL temporarily to fix their certificate error - CHANGED
 * [gd_post_badge] is_greater_than condition is not working with post date - FIXED
 * Elementor Image dynamic field fallback image not working - FIXED
+* Elementor Pro template conditions added for specific CPTs - ADDED
 
 = 2.0.0.94 =
 * Image lightbox can show image id if title is empty - FIXED
